--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,13 @@ go.work.sum
 .env
 
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+.vscode/
+
+# claude
+.claude/
+CLAUDE.md
+
+# gemini
+.gemini/
+GEMINI.md
