--- a/social/Dockerfile
+++ b/social/Dockerfile
@@ -7,9 +7,8 @@ WORKDIR /app
 COPY . .
 
 RUN go mod download
-RUN go build -o social cmd/main.go
+RUN go build -o social ./cmd/
 
-EXPOSE 8082
+EXPOSE 8083
 
 CMD ["./social"]
-
