--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,52 @@ services:
     networks:
       - microservices
 
+  # PostgreSQL database for chat service
+  chat-db:
+    image: postgres:17-alpine
+    container_name: postgresql-chat
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: ${CHAT_POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      PGDATA: /var/lib/postgresql/data
+    volumes:
+      - ./chat/config/postgres/postgres.conf:/etc/postgresql/postgresql.conf:ro
+      - ./chat/config/postgres/pg_hba.conf:/etc/postgresql/pg_hba.conf:ro
+      - ./chat/docker/postgresql/data:/var/lib/postgresql/data
+    command:
+      - "postgres"
+      - "-c"
+      - "config_file=/etc/postgresql/postgresql.conf"
+      - "-c"
+      - "hba_file=/etc/postgresql/pg_hba.conf"
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${CHAT_POSTGRES_DB}"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    networks:
+      - microservices
+
   chat:
     build:
       context: ./chat
       dockerfile: Dockerfile
     ports:
       - "8084:8082"
+    environment:
+      DB_HOST: chat-db
+      DB_PORT: 5432
+      DB_NAME: ${CHAT_POSTGRES_DB}
+      DB_USER: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_SSLMODE: disable
+    depends_on:
+      chat-db:
+        condition: service_healthy
     networks:
       - microservices
 
