--- a/chat/config/postgres/pg_hba.conf
+++ b/chat/config/postgres/pg_hba.conf
@@ -12,4 +12,7 @@ local   replication     all                                     trust
 host    replication     all             127.0.0.1/32            trust
 host    replication     all             ::1/128                 trust
 
-host    all             all             172.20.0.0/16           scram-sha-256
+# Docker Desktop host network (Mac)
+host    all             all             192.168.65.0/24         trust
+# Docker internal networks (все 172.x.x.x)
+host    all             all             172.0.0.0/8             trust
