--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,49 @@ services:
     networks:
       - microservices
 
+  social-db:
+    image: postgres:17-alpine
+    container_name: postgresql-social
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: ${SOCIAL_POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      PGDATA: /var/lib/postgresql/data
+    volumes:
+      - ./social/config/postgres/postgres.conf:/etc/postgresql/postgresql.conf:ro
+      - ./social/config/postgres/pg_hba.conf:/etc/postgresql/pg_hba.conf:ro
+      - ./social/docker/postgresql/data:/var/lib/postgresql/data
+    command:
+      - "postgres"
+      - "-c"
+      - "config_file=/etc/postgresql/postgresql.conf"
+      - "-c"
+      - "hba_file=/etc/postgresql/pg_hba.conf"
+    ports:
+      - "5433:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${SOCIAL_POSTGRES_DB}" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    networks:
+      - microservices
+
   social:
     build:
       context: ./social
       dockerfile: Dockerfile
+    environment:
+      DB_HOST: social-db
+      DB_PORT: 5433
+      DB_NAME: ${SOCIAL_POSTGRES_DB}
+      DB_USER: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_SSLMODE: disable
+    depends_on:
+      chat-db:
+        condition: service_healthy
     ports:
       - "8083:8082"
     networks:
