hw-3 implement users repository

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,46 @@ services:
     networks:
       - microservices
 
+  users-db:
+    image: postgres:17-alpine
+    container_name: postgresql-users
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: ${USERS_POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      PGDATA: /var/lib/postgresql/data
+    volumes:
+      - ./users/config/postgres/postgres.conf:/etc/postgresql/postgresql.conf:ro
+      - ./users/config/postgres/pg_hba.conf:/etc/postgresql/pg_hba.conf:ro
+      - ./users/docker/postgresql/data:/var/lib/postgresql/data
+    command:
+      - "postgres"
+      - "-c"
+      - "config_file=/etc/postgresql/postgresql.conf"
+      - "-c"
+      - "hba_file=/etc/postgresql/pg_hba.conf"
+    ports:
+      - "5434:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${USERS_POSTGRES_DB}" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    networks:
+      - microservices
+
   users:
     build:
       context: ./users
       dockerfile: Dockerfile
+    environment:
+      DB_HOST: ${USERS_POSTGRES_HOST}
+      DB_PORT: 5434
+      DB_NAME: ${USERS_POSTGRES_DB}
+      DB_USER: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_SSLMODE: disable
     ports:
       - "8082:8082"
     networks:
@@ -53,7 +89,7 @@ services:
       context: ./social
       dockerfile: Dockerfile
     environment:
-      DB_HOST: social-db
+      DB_HOST: ${SOCIAL_POSTGRES_HOST}
       DB_PORT: 5433
       DB_NAME: ${SOCIAL_POSTGRES_DB}
       DB_USER: ${POSTGRES_USER}
@@ -104,7 +140,7 @@ services:
     ports:
       - "8084:8082"
     environment:
-      DB_HOST: chat-db
+      DB_HOST: ${CHAT_POSTGRES_HOST}
       DB_PORT: 5432
       DB_NAME: ${CHAT_POSTGRES_DB}
       DB_USER: ${POSTGRES_USER}
