hw-3 add notifications

--- a/chat/config/postgres/pg_hba.conf
+++ b/chat/config/postgres/pg_hba.conf
@@ -16,3 +16,7 @@ host    replication     all             ::1/128                 trust
 host    all             all             192.168.65.0/24         trust
 # Docker internal networks (все 172.x.x.x)
 host    all             all             172.0.0.0/8             trust
+# Разрешаем подключения с любых IP (dev окружение)
+host    all             all             0.0.0.0/0               trust
+# Разрешаем подключения с хоста
+host    all             all             140.82.121.0/24         trust
