--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,7 +94,7 @@ services:
       dockerfile: Dockerfile
     environment:
       DB_HOST: ${USERS_POSTGRES_HOST}
-      DB_PORT: 5434
+      DB_PORT: 5432
       DB_NAME: ${USERS_POSTGRES_DB}
       DB_USER: ${POSTGRES_USER}
       DB_PASSWORD: ${POSTGRES_PASSWORD}
@@ -142,7 +142,7 @@ services:
       dockerfile: Dockerfile
     environment:
       DB_HOST: ${SOCIAL_POSTGRES_HOST}
-      DB_PORT: 5433
+      DB_PORT: 5432
       DB_NAME: ${SOCIAL_POSTGRES_DB}
       DB_USER: ${POSTGRES_USER}
       DB_PASSWORD: ${POSTGRES_PASSWORD}
@@ -203,9 +203,60 @@ services:
       DB_PASSWORD: ${POSTGRES_PASSWORD}
       DB_SSLMODE: disable
     depends_on:
+      chat-db:
+        condition: service_healthy
+    networks:
+      - microservices
+
+  # PostgreSQL database for chat service
+  notifications-db:
+    image: postgres:17-alpine
+    container_name: postgresql-notifications
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: ${NOTIFICATIONS_POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      PGDATA: /var/lib/postgresql/data
+    volumes:
+      - ./notifications/config/postgres/postgres.conf:/etc/postgresql/postgresql.conf:ro
+      - ./notifications/config/postgres/pg_hba.conf:/etc/postgresql/pg_hba.conf:ro
+      - ./notifications/docker/postgresql/data:/var/lib/postgresql/data
+    command:
+      - "postgres"
+      - "-c"
+      - "config_file=/etc/postgresql/postgresql.conf"
+      - "-c"
+      - "hba_file=/etc/postgresql/pg_hba.conf"
+    ports:
+      - "5429:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${NOTIFICATIONS_POSTGRES_DB}" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    networks:
+      - microservices
+
+  notifications:
+    build:
+      context: ./notifications
+      dockerfile: Dockerfile
+    ports:
+      - "8079:8082"
+    environment:
+      DB_HOST: ${NOTIFICATIONS_POSTGRES_HOST}
+      DB_PORT: 5432
+      DB_NAME: ${NOTIFICATIONS_POSTGRES_DB}
+      DB_USER: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_SSLMODE: disable
+      KAFKA_BROKERS: kafka:29092
+      KAFKA_FRIEND_REQUEST_EVENTS_TOPIC_NAME: friend-request-events
+    depends_on:
       kafka:
         condition: service_healthy
-      chat-db:
+      notifications-db:
         condition: service_healthy
     networks:
       - microservices
