--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,14 +141,16 @@ services:
       context: ./social
       dockerfile: Dockerfile
     environment:
-      DB_HOST: ${SOCIAL_POSTGRES_HOST}
-      DB_PORT: 5432
-      DB_NAME: ${SOCIAL_POSTGRES_DB}
-      DB_USER: ${POSTGRES_USER}
-      DB_PASSWORD: ${POSTGRES_PASSWORD}
-      DB_SSLMODE: disable
-      KAFKA_BROKERS: kafka:29092
-      KAFKA_FRIEND_REQUEST_EVENTS_TOPIC_NAME: friend-request-events
+      APP_SERVICE_ENVIRONMENT: ${ENVIRONMENT:-dev}
+      APP_SERVER_GRPC_PORT: 8082
+      APP_DATABASE_HOST: ${SOCIAL_POSTGRES_HOST}
+      APP_DATABASE_PORT: 5432
+      APP_DATABASE_NAME: ${SOCIAL_POSTGRES_DB}
+      APP_DATABASE_USER: ${POSTGRES_USER}
+      APP_DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
+      APP_DATABASE_SSLMODE: disable
+      APP_KAFKA_BROKERS: kafka:29092
+      APP_KAFKA_TOPICS_FRIEND_REQUEST_EVENTS: friend-request-events
     depends_on:
       kafka:
         condition: service_healthy
