hw_4 add chat config

--- a/chat/config.yaml
+++ b/chat/config.yaml
@@ -1,5 +1,5 @@
 service:
-  name: social
+  name: chat
   version: 1.0.0
   environment: dev
 
@@ -8,27 +8,11 @@ server:
     port: 8082
 
 database:
-  host: social-db
+  host: chat-db
   port: 5432
-  name: social
+  name: chat
   sslmode: disable
   max_conn_idle_time: 1m
-
-kafka:
-  brokers: kafka:29092
-  client_id: social-service
-  topics:
-    friend_request_events: friend-request-events
-
-outbox:
-  processor:
-    batch_size: 10
-    max_retry: 10
-    retry_interval: 30s
-    window: 1h
-
-friend_request_handler:
-  batch_size: 100
 
 users_service:
   host: users
@@ -47,4 +31,4 @@ secrets:
       enabled: true
       address: "http://vault:8200"
       mount_path: "secret"
-      secret_path: "social/production"
+      secret_path: "chat/production"
