--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -5,6 +5,12 @@ RUN apk add --no-cache protobuf make
 
 WORKDIR /app
 
+# Copy shared libraries
+COPY lib/postgres/ lib/postgres/
+COPY lib/secrets/ lib/secrets/
+COPY lib/config/ lib/config/
+COPY lib/app/ lib/app/
+
 # Copy auth service
 COPY auth/ auth/
 
@@ -24,6 +30,9 @@ WORKDIR /app
 
 # Copy binary from builder
 COPY --from=builder /app/auth/auth .
+
+# Copy config file
+COPY auth/config.yaml .
 
 EXPOSE 8082
 
