--- a/chat/Dockerfile
+++ b/chat/Dockerfile
@@ -8,6 +8,8 @@ WORKDIR /app
 # Copy shared libraries
 COPY lib/postgres/ lib/postgres/
 COPY lib/secrets/ lib/secrets/
+COPY lib/config/ lib/config/
+COPY lib/app/ lib/app/
 
 # Copy chat service
 COPY chat/ chat/
@@ -28,6 +30,9 @@ WORKDIR /app
 
 # Copy binary from builder
 COPY --from=builder /app/chat/chat .
+
+# Copy config file
+COPY chat/config.yaml .
 
 EXPOSE 8082
 
