--- a/notifications/Dockerfile
+++ b/notifications/Dockerfile
@@ -8,6 +8,8 @@ WORKDIR /app
 # Copy shared libraries
 COPY lib/postgres/ lib/postgres/
 COPY lib/secrets/ lib/secrets/
+COPY lib/config/ lib/config/
+COPY lib/app/ lib/app/
 
 # Copy notifications service
 COPY notifications/ notifications/
@@ -28,6 +30,9 @@ WORKDIR /app
 
 # Copy binary from builder
 COPY --from=builder /app/notifications/notifications .
+
+# Copy config file
+COPY notifications/config.yaml .
 
 EXPOSE 8082
 
