--- a/auth/config.yaml
+++ b/auth/config.yaml
@@ -10,3 +10,21 @@ server:
 users_service:
   host: users
   port: 8082
+  grpc_client:
+    timeout: 2s
+    retry:
+      max_attempts: 3
+      backoff:
+        base: 100ms
+        max: 2s
+        jitter: true
+      retryable_codes:
+        - UNAVAILABLE
+        - DEADLINE_EXCEEDED
+        - RESOURCE_EXHAUSTED
+        - ABORTED
+    circuit_breaker:
+      failures_for_open: 5
+      window: 30s
+      half_open_max_calls: 5
+      open_state_for: 60s
