--- a/gateway/config.yaml
+++ b/gateway/config.yaml
@@ -12,15 +12,71 @@ server:
 auth_service:
   host: auth
   port: 8082
+  grpc_client:
+    timeout: 2s
+    retry:
+      max_attempts: 3
+      backoff:
+        base: 100ms
+        max: 2s
+        jitter: true
+      retryable_codes: ["UNAVAILABLE","DEADLINE_EXCEEDED","RESOURCE_EXHAUSTED","ABORTED"]
+    circuit_breaker:
+      failures_for_open: 5
+      window: 30s
+      half_open_max_calls: 5
+      open_state_for: 60s
 
 users_service:
   host: users
   port: 8082
+  grpc_client:
+    timeout: 2s
+    retry:
+      max_attempts: 3
+      backoff:
+        base: 100ms
+        max: 2s
+        jitter: true
+      retryable_codes: ["UNAVAILABLE","DEADLINE_EXCEEDED","RESOURCE_EXHAUSTED","ABORTED"]
+    circuit_breaker:
+      failures_for_open: 5
+      window: 30s
+      half_open_max_calls: 5
+      open_state_for: 60s
 
 social_service:
   host: social
   port: 8082
+  grpc_client:
+    timeout: 2s
+    retry:
+      max_attempts: 3
+      backoff:
+        base: 100ms
+        max: 2s
+        jitter: true
+      retryable_codes: ["UNAVAILABLE","DEADLINE_EXCEEDED","RESOURCE_EXHAUSTED","ABORTED"]
+    circuit_breaker:
+      failures_for_open: 5
+      window: 30s
+      half_open_max_calls: 5
+      open_state_for: 60s
 
 chat_service:
   host: chat
   port: 8082
+  grpc_client:
+    timeout: 2s
+    retry:
+      max_attempts: 3
+      backoff:
+        base: 100ms
+        max: 2s
+        jitter: true
+      retryable_codes: ["UNAVAILABLE","DEADLINE_EXCEEDED","RESOURCE_EXHAUSTED","ABORTED"]
+    circuit_breaker:
+      failures_for_open: 5
+      window: 30s
+      half_open_max_calls: 5
+      open_state_for: 60s
