--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -465,6 +465,34 @@ services:
     networks:
       - microservices
 
+  ######################
+  # Metrics - Prometheus
+  ######################
+  prometheus:
+    image: prom/prometheus:v2.37.9
+    container_name: prometheus
+    hostname: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./config/prometheus/alerts.yml:/etc/prometheus/alerts.yml
+      - ./docker/prometheus:/prometheus
+    networks:
+      - microservices
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+
+  grafana:
+    image: grafana/grafana-oss:10.0.3
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./docker/grafana:/var/lib/grafana
+    networks:
+      - microservices
+
 networks:
   microservices:
     driver: bridge
