--- a/social/config.yaml
+++ b/social/config.yaml
@@ -16,6 +16,15 @@ server:
     ignore: []
     reqPerSec: 1000
     paths: []
+  admin:
+    host: 0.0.0.0
+    port: 9090
+    metrics:
+      enabled: true
+      path: /metrics
+    pprof:
+      enabled: true
+      path: /debug/pprof
 
 logger:
   level: debug  # debug, info, warn, error, fatal, panic
@@ -27,6 +36,11 @@ tracer:
   jaeger_agent_port: 6831
   sampler_type: const
   sampler_param: 1
+
+metrics:
+  enabled: true
+  namespace: balun_courses
+  subsystem: grpc
 
 database:
   host: social-db
