--- a/notifications/config.yaml
+++ b/notifications/config.yaml
@@ -3,6 +3,35 @@ service:
   version: 1.0.0
   environment: dev
 
+server:
+  grpc:
+    port: 8082
+  admin:
+    host: 0.0.0.0
+    port: 9090
+    metrics:
+      enabled: true
+      path: /metrics
+    pprof:
+      enabled: true
+      path: /debug/pprof
+
+logger:
+  level: debug  # debug, info, warn, error, fatal, panic
+
+tracer:
+  enabled: true
+  service_name: notifications
+  jaeger_agent_host: jaeger-agent
+  jaeger_agent_port: 4317
+  sampler_type: const
+  sampler_param: 1
+
+metrics:
+  enabled: true
+  namespace: balun_courses
+  subsystem: grpc
+
 database:
   host: notifications-db
   port: 5432
