--- a/chat/config.yaml
+++ b/chat/config.yaml
@@ -71,6 +71,21 @@ users_service:
       half_open_max_calls: 5
       open_state_for: 60s
 
+auth_service:
+  host: auth
+  port: 8082
+  grpc_client:
+    timeout: 2s
+    retry:
+      max_attempts: 3
+      backoff:
+        base: 100ms
+        max: 2s
+        jitter: true
+      retryable_codes:
+        - UNAVAILABLE
+        - DEADLINE_EXCEEDED
+
 secrets:
   dev:
     env_prefix: "APP_"
