--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,42 @@ services:
     networks:
       - microservices
 
+  auth-db:
+    image: postgres:17-alpine
+    container_name: postgresql-auth
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: ${AUTH_POSTGRES_DB:-auth_db}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      PGDATA: /var/lib/postgresql/data
+    volumes:
+      - ./auth/docker/postgresql/data:/var/lib/postgresql/data
+    ports:
+      - "5435:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${AUTH_POSTGRES_DB:-auth_db}" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    networks:
+      - microservices
+
+  auth-migrations:
+    image: gomicro/goose:latest
+    container_name: auth-migrations
+    depends_on:
+      auth-db:
+        condition: service_healthy
+    environment:
+      GOOSE_DRIVER: postgres
+      GOOSE_DBSTRING: "host=auth-db port=5432 user=${POSTGRES_USER} password=${POSTGRES_PASSWORD} dbname=${AUTH_POSTGRES_DB:-auth_db} sslmode=disable"
+    volumes:
+      - ./auth/migrations:/migrations
+    command: ["-dir", "/migrations", "up"]
+    networks:
+      - microservices
+
   auth:
     build:
       context: .
@@ -79,12 +115,21 @@ services:
     environment:
       APP_SERVICE_ENVIRONMENT: ${ENVIRONMENT:-dev}
       APP_SERVER_GRPC_PORT: 8082
+      APP_DATABASE_HOST: auth-db
+      APP_DATABASE_PORT: 5432
+      APP_DATABASE_NAME: ${AUTH_POSTGRES_DB:-auth_db}
+      APP_DATABASE_USER: ${POSTGRES_USER}
+      APP_DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
+      APP_DATABASE_SSLMODE: disable
       APP_USERS_SERVICE_HOST: users
       APP_USERS_SERVICE_PORT: 8082
+      APP_SECRETS_PROD_VAULT_TOKEN: dev-root-token
       JAEGER_HOST: "jaeger-agent:6831"
       JAEGER_AGENT_HOST: jaeger-agent
       JAEGER_AGENT_PORT: 4317
     depends_on:
+      auth-db:
+        condition: service_healthy
       jaeger:
         condition: service_healthy
     ports:
